--- a/nlp_projects/3_chatbots/longchain_openai/longchain.ipynb
+++ b/nlp_projects/3_chatbots/longchain_openai/longchain.ipynb
@@ -2,12 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.llms import OpenAI\n",
-    "import os"
+    "from langchain import HuggingFaceHub\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPENAI_API_KEY_VAR = os.getenv('OPENAI_API_KEY')\n",
+    "TEMPERATURE = 0.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TEMPERATURE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m llm \u001b[38;5;241m=\u001b[39m OpenAI(openai_api_key \u001b[38;5;241m=\u001b[39m OPENAI_API_KEY_VAR, temperature\u001b[38;5;241m=\u001b[39m\u001b[43mTEMPERATURE\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'TEMPERATURE' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "llm = OpenAI(openai_api_key = OPENAI_API_KEY_VAR, temperature=TEMPERATURE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Warsaw\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_text = \"Capital of poland is ?\"\n",
+    "print(llm.predict(test_text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TEMPERATURE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_huggingface = HuggingFaceHub(huggingfacehub_api_token = os.getenv('HUGGINGFACE_API_KEY'), repo_id=\"google/flan-t5-large\", model_kwargs={\"temperature\": TEMPERATURE, \"max_length\": 64})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warsaw\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_text = \"Capital of poland is ?\"\n",
+    "print(llm_huggingface.predict(test_text))"
    ]
   },
   {
